# VTranslator

./: .gitattributes  DataPack.7z  README.md  countcode.py  run.bat  trans_lang.py  venv.bat
.github/workflows/: build.yml  buildv.yml  buildvhook.yml  release.yml
NativeImpl/: CMakeLists.txt  version.cmake  version_def.cpp
NativeImpl/NativeUtils/: globalmessagelistener.cpp
NativeImpl/NativeUtils/mshtml/: MWebBrowser.cpp
NativeImpl/NativeUtils/webview2/: webview2_impl.cpp
NativeImpl/VHook/: CMakeLists.txt
NativeImpl/VHook/VHook/: CMakeLists.txt  embed_util.cc  embed_util.h  engine.h  enginecollection32.cpp  hookfinder.cc  main.cc  resource.rc
NativeImpl/VHook/VHost/: CMakeLists.txt  VHostDll.cpp  injector.cpp
NativeImpl/VHook/VHost/GUI/: CMakeLists.txt  VHost.cpp  VHost.h  confighelper.h  controls.h  main.cpp  pluginmanager.cpp  pluginmanager.h  processlistwindow.cpp  window.cpp  window.h
NativeImpl/VHook/include/: InfoStrings.h  defs.h  stringutils.h
NativeImpl/exec/: CMakeLists.txt  PyStand.cpp
NativeImpl/scripts/: hook_build32xp.bat  hook_build_win10.bat  hook_build_win7.bat  hook_configure_win10.bat  hook_configure_win7.bat
NativeImpl/shareddllproxy/: aspatch.cpp  update.cpp
VTranslator/: VTranslator.py  gobject.py  main.py  ovl.py
VTranslator/cishu/: chatgptlike.py  cishubase.py  goo.py  japandict.py  jisho.py  jpdb.py  mdict.py  mojidict.py  weblio.py
VTranslator/defaultconfig/: config.json  static_data.json
VTranslator/gui/: inputdialog.py  selecthook.py  showword.py  transhist.py  translatorUI.py
VTranslator/gui/rendertext/: webview.py
VTranslator/gui/setting/: about.py  cishu.py  display.py  display_overlay.py  display_text.py  display_ui.py  hotkey.py  setting_year.py  textinput_ocr.py  tts.py
VTranslator/htmlcode/anki/: back.html
VTranslator/htmlcode/uiwebview/: dictionary.html  mainui.html  transhist.html
VTranslator/metadata/: bangumi.py
VTranslator/myutils/: config.py  hwnd.py  ocrutil.py  updater.py  utils.py
VTranslator/myutils/template/: myanki_v2.py
VTranslator/network/server/: servicecollection.py
VTranslator/ocrengines/: SnippingTool.py  baseocrclass.py
VTranslator/textio/textsource/: filetrans.py  (+2 more)
VTranslator/translator/: gptcommon.py
files/lang/: ar.json  cht.json  cs.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pl.json  pt-br.json  pt.json  ru.json  sv.json  th.json  tr.json  uk.json  vi.json  zh.json
scripts/: build_vhook.py  build_vtranslator.py  collectall.py  collectpyruntime.py  download.bat  generate_xp_code.py  packvhook.py
userconfig/: config.json  extrahtml.html  mdict_config.json  ocrsetting.json  overlay.json  postprocessconfig.json  savegame.db  savegamedata_5.3.1.json  translatorsetting.json
userconfig/Magpie/: config.json
(+21 files in other folders)
